--- a/app/assets/stylesheets/messages.css
+++ b/app/assets/stylesheets/messages.css
@@ -1,22 +1,51 @@
-.wrapper {
- display: flex;
+..wrapper {
+  display: flex;
 }
 
 .side-bar {
   background-color: #253141;
-  width : 300px;
-  height : 100vh;
- }
+  width: 300px;
+  height: 100vh;
+}
 
- .side-bar-header {
-  height : 100px;
-  padding :0 20px;
- }
+.side-bar-header {
+  height: 100px;
+  padding: 0 20px;
+  background-color: #253141;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
 
- .rooms {
-  background-color: #2f3e51;
-  height : calc(100vh - 100px);
- }
+.header-name a{
+  font-size: 16px;
+  color: #FAFAFA;
+  text-decoration: none;
+}
+
+.create-room a {
+  font-size: 10px;
+  border: 1px solid lightblue;
+  padding: 14px;
+  color: deepskyblue;
+  text-decoration: none;
+}
+
+.rooms {
+  background-color: #2F3E51;
+  height: calc(100vh - 100px);
+  padding: 0 20px;
+  overflow: scroll;
+}
+
+.room {
+  padding: 20px 0 40px;
+}
+
+.room-name a {
+  text-decoration: none;
+  color: white;
+}
 
 .chat {
   background-color: #ffffff;
